    corresponding to the principal contains the attribute name and value
    specified in the ACL.  The Net::LDAP and Authen::SASL Perl modules are
    required to use this ACL type.  New configuration settings are
    required as well; see Wallet::Config for more information.  To enable
    this ACL type for an existing wallet database, use wallet-admin to
    register the new verifier.

    Add a comment field to objects and corresponding commands to
    wallet-backend and wallet to set and retrieve it.  The comment field
    can only be set by the owner or wallet administrators but can be seen
    by anyone on the show ACL.

    Add docs/objects-and-schemes, which provides a brief summary of the
    current supported object types and ACL schemes.

wallet 0.12 (2010-08-25)

    New client program wallet-rekey that, given a list of keytabs on the
    command line, requests new keytab objects for each principal in the
    local realm and then merges the new objects into that keytab.  The
    current implementation only acquires new keys and doesn't purge any
    old keys.

    A new ACL type, krb5-regex, is now supported.  This ACL type is the
    same as krb5 except that the identifier is interpreted as a Perl
    regular expression and matched against the authenticated identity
    attempting to run a wallet command.  Patch from Ian Durkacz.

    Add a objects unused report to wallet-report and Wallet::Report,
    returning all objects that have never been downloaded (in other words,
    have never been the target of a get command).

    Add an acls duplicate report to wallet-report and Wallet::Report,
    returning sets of ACLs that have exactly the same entries.

    Add a help command to wallet-report, which returns a summary of all
    available commands.

    Update to C TAP Harness 1.5:

    * Better reporting of fatal errors in the test suite.
    * Summarize results at the end of test execution.